syntax = "proto3";

package core;

service CoreService {
  rpc GetAnswer (Event) returns (CoreResponse);
}


message CoreResponse {}


message CustomField {
  int32 id = 1;
  string type = 2;
  repeated string values = 3;
}

message Lead {
  int32 id = 1;
  int32 pipeline_id = 2;
  int32 status_id = 3;
  int32 price = 4;
  string name = 5;
  repeated CustomField custom_fields = 6;
}

message Chat {
  string channel_uuid = 1;
}

enum MessageType {
  TEXT = 0;
  PHOTO = 1;
  VOICE = 2;
}

message MessageMeta {
  string text = 1;
  string content_url = 2;
}

message Message {
  MessageType type = 1;
  MessageMeta meta = 2;
}

message Event {
  int32 account_id = 1;
  Chat chat = 2;
  Message message = 3;
  Lead lead = 4;
}
